fix(notification): dark mode style improvement

--- a/src/scss/components/_notification-center.scss
+++ b/src/scss/components/_notification-center.scss
@@ -84,6 +84,8 @@ body.dark {
 
     &.unread {
       background: bg(darker);
+      border-left: 4px solid map.get($semantic-colors, orange);
+
     }
   }
 
